Respawn mechanic reworked. All your xp, rank and credits drop at a tombstone. Map enemies reset.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
         "itemdata.h": "c",
-        "stats.h": "c"
+        "stats.h": "c",
+        "*.zs": "c"
     }
 }
