Carry 99 mods, max weapons to 12 by overide arsenal actor files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "Disabled",
     "files.associations": {
-        "itemdata.h": "c",
-        "stats.h": "c",
         "*.zs": "c",
-        "utils.h": "c",
-        "hud.h": "c",
-        "rpg.h": "c"
+        "*.acs": "c"
     }
 }
